[tool.poetry]
name = "ayon-ash"
version = "0.3.1"
description = "Ayon service host"
authors = ["Ynput <info@ynput.io>", "Martin Wacker <martin@ynput.io"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
nxtools = "^1.6"
pydantic = "^1.10.2"
psutil = "^5.9.2"
python-dotenv = "^0.21.0"
docker = "^6.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = {version = "^22.1.0", allow-prereleases = true}
ruff = "^0.0.272"
mypy = "^1.3"

[tool.ruff]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    # "B",   # flake8-bugbear
    "ISC", # flake8-implicit-str-concat
    "C4",  # flake8-comprehensions
    # "N",    # pep8-naming
    # "SIM",  # flake8-simplify
]

ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex. C'mon - this is a complex project
]

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
