[tool.poetry]
name = "ash"
version = "0.4.0"
description = "Ayon service host"
authors = ["Ynput <info@ynput.io>", "Martin Wacker <martin@ynput.io"]

[tool.poetry.dependencies]
python = "^3.10"
nxtools = "^1.6"
pydantic = "^1.10.2"
psutil = "^5.9.2"
python-dotenv = "^0.21.0"
docker = "^7.1.0"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
ruff = "^0.3"
mypy = "^1.8"
types-requests = "^2.31.0.20240311"
kubernetes-typed = "^18.20.2"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

ignore = [
    "ISC001", # incompatible with formatting
    "E721",  # do not compare types, i'll fix this later :)
    "C901",  # too complex. C'mon - this is a complex project
]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
explicit_package_bases = true
strict_optional = true

exclude = "^[test|tool].*"

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true
